<resources>
    <!-- Headers -->
    <string name="app_name">A.D.A.P.T.</string>
    <string name="overview">Overview</string>
    <string name="instructions">Instructions</string>
    <string name="recovery_plan">Recovery Plan</string>
    <string name="recovery_data">Recovery Data</string>
    <string name="more_options">More Options</string>
    <string name="common_exercises">Common Exercises</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="start_metric">Start Metric</string>
    <string name="start_set">Start Exercise Set</string>

    <!-- Metrics -->
    <string name="rom_metric">Range of Motion (ROM) Test Metric</string>
    <string name="gait_test_metric">Gait Test Metric</string>

    <!-- Table Text -->
    <string name="exerciseTableHeader">Recovery Exercises:</string>
    <string name="metricTableHeader">Metrics:</string>
    <string name="exerciseName">Exercise Name</string>
    <string name="metricName">Metric Name</string>
    <string name="sets">Sets</string>
    <string name="setNumber">Set #</string>
    <string name="reps">Reps</string>
    <string name="hold">Hold</string>
    <string name="holdSecs">Hold (secs)</string>
    <string name="tension">Tension</string>
    <string name="freq">Freq.</string>
    <string name="percentCompleted">% Completed</string>
    <string name="percentSymbol">%</string>
    <string name="time">Time</string>
    <string name="timeOfCompletion">Time of Completion</string>
    <string name="difficulty">Difficulty</string>
    <string name="comments">Comments</string>
    <string name="viewMetrics">View Metrics</string>
    <string name="viewDetails">View Details</string>
    <string name="tensionRange">Tension Level (1–6):</string>
    <string name="difficultyRange">Difficulty Level (1–10):</string>
    <string name="defaultZero">0</string>
    <string name="noData">---</string>
    <string name="NA">N/A</string>

    <!-- Page Text -->
    <string name="weeklyGoalProgressText">Weekly Goal Progress:</string>
    <string name="overviewRecoveryPlanGoalsText">Overview of Recovery Plan Goals:</string>
    <string name="congratulationsGoalsCompletedText">Congratulations! All goals have been completed for this week!\nNew goals can be added from the Recovery Plan page.</string>
    <string name="noGoalsSetText">There are no goals set for this week.\nClick below to set new goals or copy your goals from last week!</string>
    <string name="totalROMText">Total ROM:</string>
    <string name="difficultyText">Difficulty:</string>
    <string name="gaitTestResultsText">Gait Test Results:</string>

    <!-- Data -->
    <string name="minText">Min</string>
    <string name="maxText">Max</string>
    <string name="zeroDegrees">0°</string>
    <string name="fullDegrees">360°</string>

    <!-- Settings Options -->
    <string name="weeklyGoalReminder">Weekly Goal Reminder</string>
    <string name="dailyExerciseReminder">Daily Exercise Reminder</string>

    <!-- Buttons -->
    <string name="connectDeviceBtn">Connect to Device</string>
    <string name="startBtn">Start</string>
    <string name="startExerciseBtn">Start Exercise</string>
    <string name="startMetricBtn">Start Metric</string>
    <string name="startROMBtn">Start ROM Test</string>
    <string name="startGaitBtn">Start Gait Test</string>
    <string name="startSetBtn">Start Set</string>
    <string name="endSetBtn">End Set</string>
    <string name="startTestRepBtn">Start Test Rep</string>
    <string name="endTestRepBtn">End Test Rep</string>
    <string name="finishExerciseBtn">Finish &amp; Save Exercise</string>
    <string name="finishMetricBtn">Finish &amp; Save Metric</string>
    <string name="editGoalsBtn">Edit Goals</string>
    <string name="setGoalsBtn">Set Goals</string>
    <string name="copyGoalsBtn">Copy Goals</string>
    <string name="viewMetricsBtn">View Metrics</string>
    <string name="viewBtn">View</string>
    <string name="saveDataBtn">Save Data</string>
    <string name="importBtn">Import</string>
    <string name="exportBtn">Export</string>
    <string name="deleteRowBtn">Delete Row</string>
    <string name="addRowBtn">Add Row</string>
    <string name="recalculatePercentagesBtn">Recalculate %</string>

    <!-- Fragments -->
    <string name="requiredFieldsFormText">Fields marked with * are required.</string>
    <string name="recordedMetricsText">Recorded Metrics:</string>
    <string name="recordedDetailsText">Recorded Calibration Details:</string>
    <string name="plantarDorsiflexionTotalRangeText">Plantar/Dorsiflexion Total Range:</string>
    <string name="plantarDorsiflexionAverageTotalRangeText">Plantar/Dorsiflexion Average Total Range:</string>
    <string name="inverEverTotalRangeText">Inversion/Eversion Total Range:</string>
    <string name="inverEverAverageTotalRangeText">Inversion/Eversion Average Total Range:</string>
    <string name="minAngleText">Min Angle:</string>
    <string name="maxAngleText">Max Angle:</string>
    <string name="minAngleAverageText">Average Min Angle:</string>
    <string name="maxAngleAverageText">Average Max Angle:</string>
    <string name="numStepsText">Number of Steps:</string>
    <string name="numStepsAverageText">Average Number of Steps:</string>
    <string name="cadenceText">Cadence (steps/min):</string>
    <string name="cadenceAverageText">Average Cadence (steps/min):</string>
    <string name="impactForceText">Impact Force (G):</string>
    <string name="impactForceAverageText">Average Impact Force (G):</string>
    <string name="swingStanceRatioText">Swing to Stance Ratio (%):</string>
    <string name="swingStanceRatioAverageText">Average Swing to Stance Ratio (%):</string>
    <string name="startExerciseWarning">Start Exercise Warning!</string>
    <string name="startMetricWarning">Start Metric Warning!</string>
    <string name="commentsText">Comments:</string>
    <string name="noComments">No Comments</string>

    <!-- Toasts -->
    <string name="bluetoothPermissionsDisabledToast">Bluetooth permissions disabled.</string>
    <string name="bluetoothPermissionsDeniedToast">Bluetooth permission denied.</string>
    <string name="bluetoothPermissionsGrantedToast">Bluetooth permission granted.</string>
    <string name="bluetoothPermissionsRequiredToast">Bluetooth permissions are required.</string>
    <string name="bluetoothServiceNotAvailableToast">Bluetooth service not available.</string>
    <string name="bluetoothNotSupportedToast">Bluetooth not supported.</string>
    <string name="noRepsSetsToast">No sets and/or reps submitted. Please complete 1 rep before saving data.</string>
    <string name="enterExerciseNameToast">Please enter an exercise name.</string>
    <string name="enterMetricNameToast">Please enter a metric name.</string>
    <string name="enterDifficultyLevelToast">Please enter a difficulty level between 1 and 10, or leave it blank.</string>
    <string name="enterValidFrequencyNumberToast">Please enter a valid frequency number.</string>
    <string name="selectFrequencyCategoryToast">Please select a frequency category.</string>
    <string name="enterValidSetsToast">Please enter a valid number of sets.</string>
    <string name="enterValidRepsToast">Please enter a valid number of reps.</string>
    <string name="enterValidHoldToast">Please enter a valid hold duration.</string>
    <string name="enterValidTensionToast">Please enter a tension level between 1 and 6.</string>
    <string name="enterTensionOnDeviceToast">Please enter the tension level between 1 and 6 that is set on the device.</string>
    <string name="exerciseAlreadyExistsToast">This exercise already exists in the table, please edit the goal instead.</string>
    <string name="metricAlreadyExistsToast">This metric already exists in the table, please edit the goal instead.</string>
    <string name="enableNotificationsToast">Please enable notification permissions in the settings.</string>
    <string name="selectNotificationTimeToast">Please select a time before activating the notification.</string>
    <string name="selectNotificationDayToast">Please select a day before activating the notification.</string>
    <string name="notificationsEnabledToast">Notification permission enabled.</string>
    <string name="notificationsDisabledToast">Notification permission denied.</string>
    <string name="importFailedToast">Import failed.</string>
    <string name="importNoFileToast">No file found to import.</string>
    <string name="importSuccessToast">Data imported successfully.</string>
    <string name="exportFailedToast">Export failed.</string>
    <string name="noRowsToDeleteToast">Please select a row before deleting data.</string>
    <string name="noMetricsAvailableToast">No metrics are available to view.</string>

    <!-- Symbols -->
    <string name="asteriskSymbol">*</string>
    <string name="degreesSymbol">°</string>
    <string name="dashesSymbol">---</string>

    <string-array name="frequency_categories">
        <item>day</item>
        <item>week</item>
    </string-array>

    <!-- Error -->
    <string name="error">error</string>
</resources>