<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/overview" />
    <item
        android:id="@+id/nav_recovery_plan"
        android:icon="@drawable/baseline_assignment_24"
        android:title="@string/recovery_plan" />
    <item
        android:id="@+id/nav_recovery_data"
        android:icon="@drawable/baseline_checklist_24"
        android:title="@string/recovery_data" />
    <item
        android:id="@+id/nav_instructions"
        android:icon="@drawable/baseline_info_24"
        android:title="@string/instructions" />
    <item
        android:id="@+id/nav_more_options"
        android:icon="@drawable/baseline_more_horiz_24"
        android:title="@string/more_options" />
</menu>
