<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    app:cardCornerRadius="24dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="?attr/colorSecondaryVariant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- Selection Checkbox -->
        <CheckBox
            android:id="@+id/selectRowCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center" />

        <!-- Exercise Name -->
        <TextView
            android:id="@+id/exerciseName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:textSize="16sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/exerciseName"
            android:gravity="center" />

        <!-- Sets -->
        <EditText
            android:id="@+id/sets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/sets"
            android:inputType="number"
            android:gravity="center" />

        <!-- Reps -->
        <EditText
            android:id="@+id/reps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/reps"
            android:inputType="number"
            android:gravity="center" />

        <!-- Hold -->
        <EditText
            android:id="@+id/hold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/hold"
            android:inputType="number"
            android:gravity="center" />

        <!-- Tension -->
        <EditText
            android:id="@+id/tension"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:hint="@string/tension"
            android:inputType="number"
            android:gravity="center" />

        <!-- Completion Time -->
        <EditText
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:hint="@string/time"
            android:inputType="text"
            android:gravity="center" />

        <!-- Difficulty -->
        <EditText
            android:id="@+id/difficulty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:hint="@string/difficulty"
            android:inputType="number"
            android:gravity="center" />

        <!-- Comments -->
        <EditText
            android:id="@+id/comments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:hint="@string/comments"
            android:inputType="text"
            android:gravity="center" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
