<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:gravity="center_horizontal">

    <!-- Table row for header -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/selectRowCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center" />

        <TextView
            android:id="@+id/exerciseName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:textSize="14sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/exerciseName"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/sets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/sets"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/reps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/reps"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/hold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/holdSecs"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/tension"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="14sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/tension"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/frequency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textSize="14sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/freq"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/percentageCompleted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:textSize="14sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/percentCompleted"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/startExerciseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:padding="0dp"
            android:layout_marginHorizontal="10dp"
            android:textSize="14sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/startExerciseBtn"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/comments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:textSize="14sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/comments"
            android:textStyle="bold"
            android:gravity="center" />
    </TableRow>
</TableLayout>
