<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="24dp"
    app:cardCornerRadius="24dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="?attr/colorSecondaryVariant">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp"
        android:orientation="horizontal"
        android:gravity="center">

        <!-- Exercise Name -->
        <TextView
            android:id="@+id/exerciseName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:text="@string/exerciseName"
            android:textSize="16sp"
            android:textColor="?attr/colorOnPrimary"
            android:gravity="center" />

        <!-- Sets -->
        <TextView
            android:id="@+id/sets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sets"
            android:textSize="16sp"
            android:textColor="?attr/colorOnPrimary"
            android:gravity="center" />

        <!-- Reps -->
        <TextView
            android:id="@+id/reps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reps"
            android:textSize="16sp"
            android:textColor="?attr/colorOnPrimary"
            android:gravity="center" />

        <!-- Hold -->
        <TextView
            android:id="@+id/hold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hold"
            android:textSize="16sp"
            android:textColor="?attr/colorOnPrimary"
            android:gravity="center" />

        <!-- Tension -->
        <TextView
            android:id="@+id/tension"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tension"
            android:textSize="16sp"
            android:textColor="?attr/colorOnPrimary"
            android:gravity="center" />

        <!-- Frequency -->
        <TextView
            android:id="@+id/frequency"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/freq"
            android:textSize="16sp"
            android:textColor="?attr/colorOnPrimary"
            android:gravity="center" />

        <!-- Percentage Completed -->
        <TextView
            android:id="@+id/percentageCompleted"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.6"
            android:text="@string/percentSymbol"
            android:textSize="16sp"
            android:textColor="?attr/colorOnPrimary"
            android:gravity="center" />

        <!-- Start Exercise Button -->
        <Button
            android:id="@+id/startExerciseBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.1"
            android:padding="0dp"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/startBtn"
            android:gravity="center" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
