<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/recordedDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recordedMetricsText"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="?attr/colorTertiary" />

    <!-- ROM Plantar/Dorsiflexion -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/romPlantarDorsiflexionRangeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/plantarDorsiflexionTotalRangeText"
            android:textColor="?attr/colorTertiary" />

        <TextView
            android:id="@+id/romPlantarDorsiflexionRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zeroDegrees"
            android:textColor="?attr/colorTertiary"
            android:layout_marginStart="4dp" />
    </LinearLayout>

    <!-- ROM Inversion/Eversion -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/romInversionEversionRangeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inverEverTotalRangeText"
            android:textColor="?attr/colorTertiary" />

        <TextView
            android:id="@+id/romInversionEversionRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zeroDegrees"
            android:textColor="?attr/colorTertiary"
            android:layout_marginStart="4dp" />
    </LinearLayout>

    <!-- Comments -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:text="@string/commentsText"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="?attr/colorTertiary" />

    <EditText
        android:id="@+id/comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/noComments"
        android:inputType="text"
        android:textSize="14sp"
        android:textColorHint="@color/grey_3"
        android:textColor="?attr/colorTertiary" />
</LinearLayout>
