<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="4dp"
    app:cardCornerRadius="24dp"
    app:cardElevation="6dp"
    app:cardBackgroundColor="?attr/colorSecondary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:id="@+id/selectRowCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center" />

        <TextView
            android:id="@+id/exerciseName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:textSize="16sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/exerciseName"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/sets"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/sets"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/reps"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/reps"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/hold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/holdSecs"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/tension"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:textSize="16sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/tension"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:textSize="16sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/timeOfCompletion"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/difficulty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:textSize="16sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/difficulty"
            android:textStyle="bold"
            android:gravity="center" />

        <TextView
            android:id="@+id/comments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:textSize="16sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/comments"
            android:textStyle="bold"
            android:gravity="center" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
