<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:stretchColumns="1"
    android:gravity="center_horizontal">

    <!-- Table row for exercise row items -->
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <!-- Selection Checkbox -->
        <CheckBox
            android:id="@+id/selectRowCheckBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.7"
            android:gravity="center" />

        <!-- Metric Name -->
        <TextView
            android:id="@+id/metricName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.5"
            android:textSize="16sp"
            android:textColor="?attr/colorOnBackground"
            android:text="@string/metricName"
            android:gravity="center" />

        <!-- Completion Time -->
        <EditText
            android:id="@+id/time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:hint="@string/time"
            android:inputType="text"
            android:gravity="center" />

        <!-- View Metrics Button -->
        <Button
            android:id="@+id/viewMetricsBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/viewBtn"
            android:gravity="center" />

        <!-- Difficulty -->
        <EditText
            android:id="@+id/difficulty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/difficulty"
            android:inputType="number"
            android:gravity="center" />

        <!-- Comments -->
        <EditText
            android:id="@+id/comments"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2.5"
            android:hint="@string/comments"
            android:inputType="text"
            android:gravity="center" />
    </TableRow>
</TableLayout>
